--- a/src/app/components/preke-lys/preke-lys.component.html
+++ b/src/app/components/preke-lys/preke-lys.component.html
@@ -59,12 +59,12 @@
         />
 	</div>
         <div class="form-group">
-          <label for="tema1" *ngIf="currentLanguage === 'Afrikaans'"
+          <label for="digitaalpreke1" *ngIf="currentLanguage === 'Afrikaans'"
             >Soekwoord in digitale preke</label
           >
           <input
             type="text"
-            id="tema1"
+            id="digitaalpreke1"
             class="form-control"
             *ngIf="currentLanguage === 'Afrikaans'"
             [(ngModel)]="filters.digitaalpreke"
@@ -72,26 +72,26 @@
         </div>
 
         <div class="form-group">
-          <label for="tema2" *ngIf="currentLanguage === 'Nederlands'"
+          <label for="digitaalpreke2" *ngIf="currentLanguage === 'Nederlands'"
             >Zoekwoord in digitale preke</label
           >
           <input
             type="text"
-            id="tema2"
+            id="digitaalpreke2"
             class="form-control"
             *ngIf="currentLanguage === 'Nederlands'"
-            [(ngModel)]="filters.tema"
+            [(ngModel)]="filters.digitaalpreke"
           />
         </div>
 
         <!-- Assuming you're toggling these based on language, similar structure for other fields -->
         <div class="form-group">
-          <label for="tema3" *ngIf="currentLanguage === 'Afrikaans'"
+          <label for="tema1" *ngIf="currentLanguage === 'Afrikaans'"
             >Soekwoord in tema</label
           >
           <input
             type="text"
-            id="tema3"
+            id="tema1"
             class="form-control"
             *ngIf="currentLanguage === 'Afrikaans'"
             [(ngModel)]="filters.tema"
@@ -99,12 +99,12 @@
         </div>
 
         <div class="form-group">
-          <label for="tema4" *ngIf="currentLanguage === 'Nederlands'"
+          <label for="tema2" *ngIf="currentLanguage === 'Nederlands'"
             >Zoekwoord in thema</label
           >
           <input
             type="text"
-            id="tema4"
+            id="tema2"
             class="form-control"
             *ngIf="currentLanguage === 'Nederlands'"
             [(ngModel)]="filters.tema"
@@ -209,6 +209,57 @@
               required
             />
             Afrikaans
+          </label>
+        </div>
+      </div>
+      <br />
+
+      <div class="form-group">
+        <label for="taal" *ngIf="currentLanguage === 'Afrikaans'"
+          >Vorm-opsie</label
+        >
+        <label for="taal" *ngIf="currentLanguage === 'Nederlands'"
+          >Vorm-optie</label
+        >
+        <div class="radio-options">
+          <label>
+            <input
+              type="radio"
+              name="vorm"
+              [(ngModel)]="filters.vorm"
+              value="Als"
+              class="form-control"
+              required
+              checked
+            />
+            {{ currentLanguage === "Afrikaans" ? "Almal" : "Alle" }}
+          </label>
+
+          <label>
+            <input
+              type="radio"
+              name="vorm"
+              [(ngModel)]="filters.vorm"
+              value="skandeer"
+              class="form-control"
+              required
+            />
+            {{
+              currentLanguage === "Afrikaans" ? "Skandeer" : "Scan"
+            }}
+          </label>
+          <label>
+            <input
+              type="radio"
+              name="vorm"
+              [(ngModel)]="filters.vorm"
+              value="digitaal"
+              class="form-control"
+              required
+            />
+            {{
+              currentLanguage === "Afrikaans" ? "Digitaal" : "Digitaal"
+            }}
           </label>
         </div>
       </div>
@@ -510,16 +561,16 @@
       let i = index
     "
   >
-    <td>{{ row.PreekNo }}</td>
-    <td>{{ row.Jaar }}</td>
-    <td>{{ row.KortBeskrywing }}</td>
-    <td>{{ row.Taal }}</td>
-    <td>{{ row.Tema }}</td>
-    <td>{{ row.Verse }}</td>
+    <td>{{ row.nr }}</td>
+    <td>{{ row.jaar }}</td>
+    <td>{{ row.bron }}</td>
+    <td>{{ row.taal }}</td>
+    <td>{{ row.tema }}</td>
+    <td>{{ row.teks }}</td>
     <td>
       <a
         href="https://prekevdwaal.s3.eu-west-1.amazonaws.com/preke/{{
-          row.PreekNo
+          row.nr
         }}.pdf"
         target="_blank"
       >
