--- a/src/app/components/preke-lys/preke-lys.component.css
+++ b/src/app/components/preke-lys/preke-lys.component.css
@@ -3,7 +3,7 @@
 .radio-options,
 .buttons-container {
   display: flex;
-  align-items: center; /* Align items vertically in the center */
+  align-items: flex-start; /* Align items vertically in the center */
   flex-wrap: wrap; /* Allows items to wrap to the next line if not enough space */
 }
 
@@ -49,6 +49,10 @@ label {
   height: 30px;
   border: none; /* Removes border */
 }
+.btn-success {
+  height: 40px;
+  width: 100%;
+}
 /* Enhances the visibility of the download button */
 .download-button {
   background-color: #d7a975;
@@ -76,7 +80,7 @@ label {
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Soft shadow around the table for depth */
   margin-top: 20px; /* Adds space above the table */
   margin-bottom: 20px; /* Adds space below the table */
-  font-size: 16px; /* Adjusts the font size for readability */
+  font-size: 14px; /* Adjusts the font size for readability */
 }
 
 #prekeLys th,
@@ -167,36 +171,55 @@ label {
   margin-right: 5px; /* Adds a small space between the checkbox and the label text */
 }
 
-#load {
-  position: fixed; /* Or absolute, depending on your layout */
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100vh; /* Full viewport height */
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
-  color: #892b21;
-  font-size: 3rem;
-  font-weight: bold;
-  overflow: hidden; /* Prevents any part of the scrolling text from overflowing the div */
-}
-
-#load div {
-  position: relative;
-  white-space: nowrap; /* Keeps the text in a single line */
-  animation: scrollText 5s linear infinite; /* Adjust time as needed */
-}
-
-@keyframes scrollText {
-  from {
-    right: 100%;
-  }
-  to {
-    right: -100%;
-  }
-}
 .pagination ::ng-deep .ngx-pagination .current {
   background: #d7a975;
 }
+
+#laai-container {
+  text-align: center;
+}
+
+.loading-text {
+  font-size: 6rem;
+  font-weight: 600;
+  color: #892B21;
+  overflow: visible;
+  white-space: nowrap;
+  position: relative;
+}
+
+.loading-text .letter {
+  display: inline-block;
+  animation: bounce 1.4s infinite both;
+}
+
+@keyframes bounce {
+  0%, 80%, 100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-30px);
+  }
+  60% {
+    transform: translateY(-15px);
+  }
+}
+
+/* Specific animations for different letters for varied effects */
+.loading-text .letter:nth-child(1) { animation-delay: 0.1s; }
+.loading-text .letter:nth-child(2) { animation-delay: 0.2s; }
+.loading-text .letter:nth-child(3) { animation-delay: 0.3s; }
+.loading-text .letter:nth-child(4) { animation-delay: 0.4s; }
+.loading-text .letter:nth-child(5) { animation-delay: 0.5s; }
+.loading-text .letter:nth-child(6) { animation-delay: 0.6s; }
+.loading-text .letter:nth-child(7) { animation-delay: 0.7s; }
+.loading-text .letter:nth-child(8) { animation-delay: 0.8s; }
+.loading-text .letter:nth-child(9) { animation-delay: 0.9s; }
+
+/* Responsive adjustments */
+@media screen and (max-width: 768px) {
+  .loading-text {
+    font-size: 1.5rem;
+  }
+}
+
